--- a/index.css
+++ b/index.css
@@ -2,4 +2,44 @@ html,
 body {
   margin: 0;
   padding: 0;
+  
+  background-color: #eef0f4;
+
+}
+
+
+.container{
+  display:flex;
+  flex-direction: column;
+  max-width: 320px;
+  margin:30px auto;
+}
+
+img{
+  width:150px;
+  margin: 0 auto;
+}
+input,
+button{
+  border-radius: 8px;
+  padding: 15px;
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Rubik', sans-serif;
+}
+input{
+  color:#432000;
+  background-color: #dce1eb;
+  border:none;
+  margin: 10px 0;
+ 
+}
+
+button{
+  color:#fdfdfd;
+  background-color: #ac485a;
+  border:none;
+  
+
+
 }
