addded hover styles to buttons and user-select to app

--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ body {
   padding: 0;
   font-family: 'Rubik', sans-serif;
   background-color: #eef0f4;
+  color:#432000;
+  user-select: none;
 
 }
 
@@ -39,9 +41,15 @@ button{
   color:#fdfdfd;
   background-color: #ac485a;
   border:none;
+  transition: all 150ms ease-in-out;
  
  
 }
+button:hover{
+  background-color: #432000;
+  cursor:pointer;
+}
+
 ul{
 padding:0;
 display:flex;
@@ -57,7 +65,10 @@ ul li{
   list-style: none;
  text-align: center;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+   transition: all 150ms ease-in-out;
   
-  
-
+}
+ul li:hover{
+  background-color: #ffecc7;
+  cursor: pointer;
 }
