--- a/index.css
+++ b/index.css
@@ -2,9 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Comic Neue', cursive;
   background-color: #eef0f4;
-  color:#432000;
+  color:#3b0944;
   user-select: none;
 
 }
@@ -20,6 +20,7 @@ body {
 img{
   width:150px;
   margin: 0 auto;
+  background-color: none;
 }
 input,
 button{
@@ -27,10 +28,10 @@ button{
   padding: 15px;
   font-size: 20px;
   text-align: center;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Comic Neue', cursive;
 }
 input{
-  color:#432000;
+  color:#3b0944;
   background-color: #dce1eb;
   border:none;
   margin: 10px 0;
@@ -39,14 +40,14 @@ input{
 
 button{
   color:#fdfdfd;
-  background-color: #ac485a;
+  background-color:  #de4383;
   border:none;
   transition: all 150ms ease-in-out;
  
  
 }
 button:hover{
-  background-color: #432000;
+  background-color: #3b0944;
   cursor:pointer;
 }
 
@@ -69,6 +70,7 @@ ul li{
   
 }
 ul li:hover{
-  background-color: #ffecc7;
+  color:#FFFDF8;
+  background-color: #5f1854;
   cursor: pointer;
 }
